Adding two components: Grid & Journal_Form with their basic logic

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -29,7 +29,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: yellow;
+  background-color: rgb(98, 255, 0);
 }
 
 h1 {
