Adding styles for SignIn Component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import "../scss/settings/all";
 @import "../scss/elements/Buttons";
 @import "../scss/elements/Links";
+@import "../scss/elements/SignIn_Styles";
 
 // Elements
 @import "../scss/elements/Grid_Styles";
