--- a/src/scss/elements/_Buttons.scss
+++ b/src/scss/elements/_Buttons.scss
@@ -10,7 +10,9 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  // border-color:;
+  border: 1px solid #000000;
+  box-shadow: 1px 1px 1px 1px rgb(51, 48, 48);
 }
 button:focus,
 button:focus-visible {
@@ -25,6 +27,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: $main-color;
   }
 }
