--- a/src/scss/settings/_all.scss
+++ b/src/scss/settings/_all.scss
@@ -1,31 +1,34 @@
-//vite.js app
-
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  text-align: center;
-}
-
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  //   min-width: 320px;
-  min-height: 100vh;
-  background-color: rgb(98, 255, 0);
+  height: 100vh;
+  width: 100vw;
+  background-color: salmon;
+
+  // display: flex;
+  // place-items: center;
+  // overflow-y: hidden;
+  // overflow-x: hidden;
 }
 
+#root {
+  width: 100%;
+  height: 100%;
+  // line-height: 1.5;
+
+  // margin: 0 auto;
+  // text-align: center;
+}
+
+
+
 //vite.js index
-
 // :root {
-//   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-//   line-height: 1.5;
-//   font-weight: 400;
 
-//   color-scheme: light dark;
-//   color: rgba(255, 255, 255, 0.87);
 //   background-color: #242424;
-
+// font-weight: 400;
+// font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+// color-scheme: light dark;
+// color: rgba(255, 255, 255, 0.87);
 //   font-synthesis: none;
 //   text-rendering: optimizeLegibility;
 //   -webkit-font-smoothing: antialiased;
