Editing styles for SignIn component

--- a/src/scss/elements/_Buttons.scss
+++ b/src/scss/elements/_Buttons.scss
@@ -4,20 +4,15 @@ button {
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  // border-color:;
-  border: 1px solid #000000;
-  box-shadow: 1px 1px 1px 1px rgb(51, 48, 48);
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+
+// button:focus,
+// button:focus-visible {
+//   outline: 4px auto white;
+// } // obramowanie po naciśnięciu na button
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
