--- a/src/scss/elements/_SignIn_Styles.scss
+++ b/src/scss/elements/_SignIn_Styles.scss
@@ -5,33 +5,71 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  text-align: right;
-  .signUp_button_container {
-    margin-right: 3rem;
-    margin-top: 0.5rem;
+
+  display: flex;
+  justify-content: space-around;
+  align-items: end;
+
+  .signIn_signUp_button {
+    margin-right: 120px;
+    // margin-bottom: 30px;
+    button {
+      color: white;
+      // font-family: ;
+    }
+    button:hover {
+      border: 1px solid red;
+      box-shadow: 1px 1px 1px 1px #f0552f;
+    }
   }
 }
 
-.signIn_inputs {
-  margin-right: 13rem;
-  margin-bottom: 0.5rem;
+.signIn_form {
   color: $main-color;
+  margin-right: 120px;
+  // margin-bottom: 80px;
+  display: flex;
+  gap: 100px;
+  flex-direction: column;
 
   h1 {
-    font-family: "Sacramento", cursive;
-    font-size: 4.5rem;
+    font-family: "Berkshire Swash", cursive;
+    font-size: 5.5rem;
     word-spacing: 5px;
     margin-block-end: 0.1em;
-    text-shadow: 2px 2px #0f0808;
+    text-shadow: 2px 2px #f0552f;
+    // shape-outside: ellipse(20%);
   }
-
-  input {
-    margin-bottom: 10px;
-    border: 1px solid $main-color;
-    height: 25px;
+  .signIn_inputs {
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    .signIn_error {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 200px;
+      margin-bottom: 2px;
+      text-shadow: 2px black;
+    }
+    form {
+      text-align: right;
+      button {
+        color: white;
+        margin-top: 5px;
+      }
+      button:hover {
+        border: 1px solid red;
+        box-shadow: 1px 1px 1px 1px #f0552f;
+      }
+    }
+    input {
+      margin-bottom: 10px;
+      border: 1px solid $main-color;
+      height: 30px;
+      width: 200px;
+    }
   }
 }
 
