--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 @import "../scss/elements/Buttons";
 @import "../scss/elements/Links";
 @import "../scss/elements/SignIn_Styles";
+@import "../scss/elements/SignUp_Styles";
 
 // Elements
 @import "../scss/elements/Grid_Styles";
