--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,10 +7,13 @@
 @import "../scss/settings/mixins";
 @import "../scss/settings/variables";
 @import "../scss/settings/all";
+
+// Elements
 @import "../scss/elements/Buttons";
 @import "../scss/elements/Links";
 @import "../scss/elements/SignIn_Styles";
 @import "../scss/elements/SignUp_Styles";
-
-// Elements
-@import "../scss/elements/Grid_Styles";
+@import "../scss/elements/Grid_Buttons_Styles";
+@import "../scss/elements/Grid_Component_Styles";
+@import "../scss/elements/Journal_Form_Styles.scss";
+@import "../scss/elements/Main_Styles";
