Styling Journal_Entries part 1

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,3 +17,4 @@
 @import "../scss/elements/Grid_Component_Styles";
 @import "../scss/elements/Journal_Form_Styles.scss";
 @import "../scss/elements/Main_Styles";
+@import "../scss/elements/Journal_Entries_Styles";
