--- a/src/scss/elements/_Journal_Entries_Styles.scss
+++ b/src/scss/elements/_Journal_Entries_Styles.scss
@@ -5,33 +5,35 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+
   display: flex;
+
   justify-content: center;
-  flex-direction: column;
   align-items: center;
 
   .Journal_Entries_Elements {
     display: flex;
     flex-direction: column;
-    width: 95%;
+    width: 98%;
     height: 95%;
     align-items: center;
-    border: 4px solid yellow;
 
     .logOut_Button_Entries {
-      //   margin-top: 35px;
-      margin-left: 1000px;
+      width: 100%;
+      display: flex;
+      justify-content: end;
+      margin-right: 120px;
+      position: absolute;
+      margin-bottom: 600px;
+      margin-top: 8.5px;
+      button {
+        @include main_button_styles;
+      }
     }
     .Title_Entries {
       text-align: center;
-      margin-left: 480px;
-      margin-top: 20px;
-      margin-bottom: 10px;
-
-      h1 {
-        margin-top: 0;
-        margin-bottom: 0;
-      }
+      margin-left: 630px;
+      margin-top: 90px;
 
       font-family: "Berkshire Swash", cursive;
       font-size: 2.5rem;
@@ -39,37 +41,108 @@
       word-spacing: 5px;
       margin-block-end: 0.1em;
 
-      text-shadow: 5px 5px #2e2222;
+      text-shadow: 7px 5px #7a2929;
     }
 
-    .Journal_Entries {
-      overflow-y: scroll;
-      //   margin: 30px;
-      width: 50%;
-      height: 50%;
-      margin-left: 600px;
-      border: 3px solid green;
+    .second_container_entries {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      gap: 500px;
 
-      .Ul_Entries {
-        list-style: none;
-        li {
-          margin-bottom: 15px;
-          .journal_entry {
-            background-color: rgba(224, 103, 103, 0.6);
+      margin-top: 25px;
 
-            .current_date_div {
-              font-size: 1.3rem;
-              font-weight: bold;
-              margin: 5px;
-              color: #99113a;
-              text-shadow: 1px 1px black;
+      .Journal_Entries {
+        overflow-y: scroll;
+        width: 50%;
+        height: 63%;
+
+        .Ul_Entries {
+          list-style: none;
+          li {
+            margin-bottom: 15px;
+            margin-right: 5px;
+
+            border-radius: 20px;
+            .journal_entry {
+              border-radius: 20px;
+              padding: 10px;
+              display: flex;
+              flex-direction: column;
+
+              background-color: rgba(224, 103, 103, 0.4);
+              .current_date_div {
+                border-radius: 20px;
+                padding: 10px;
+                font-size: 1.6rem;
+                font-weight: bold;
+                margin: 5px;
+                color: #99113a;
+                text-shadow: 1px 1px black;
+              }
+              .entry_div {
+                font-size: 1.2rem;
+                border-radius: 20px;
+                padding: 10px;
+                font-weight: bold;
+                line-height: normal;
+                min-height: 50px;
+                color: black;
+              }
+              .song_button {
+                border-radius: 20px;
+                padding: 10px;
+                font-size: 1.1rem;
+
+                width: 100%;
+                display: flex;
+                justify-content: center;
+
+                a {
+                  background-color: rgba(20, 209, 20, 0.7);
+                  color: black;
+                  width: 300px;
+                  text-align: center;
+                  border-radius: 20px;
+                  padding: 5px;
+                }
+                a:hover {
+                  background-color: rgba(20, 209, 20, 1);
+                }
+              }
             }
           }
         }
       }
-    }
-    .Add_another_entry_button {
-      border: 2px solid white;
+
+      .Journal_Entries::-webkit-scrollbar {
+        background-color: rgba(122, 41, 41, 0.6);
+        border-radius: 20%;
+        width: 15px;
+      }
+      .Journal_Entries::-webkit-scrollbar-thumb {
+        background-color: rgba(240, 113, 113, 0.6);
+
+        width: 80%;
+
+        border-radius: 30%;
+      }
+      .Add_another_entry_button {
+        height: 63%;
+        display: flex;
+        align-items: flex-end;
+        button {
+          margin-bottom: 25px;
+          border-radius: 50px;
+          @include main_button_styles;
+          font-size: 1.2rem;
+          color: rgb(255, 241, 229);
+          &:hover {
+            box-shadow: 2px 2px 2px 2px rgb(75, 56, 56);
+          }
+        }
+      }
     }
   }
 }
