--- a/src/scss/elements/_Links.scss
+++ b/src/scss/elements/_Links.scss
@@ -1,8 +1,7 @@
 a {
-  font-weight: 500;
-  color: #646cff;
+  // font-weight: 500;
+  font-weight: bold;
+  color: #14d114c0;
   text-decoration: inherit;
-}
-a:hover {
-  color: #f26e53;
+  letter-spacing: 1.5px;
 }
