--- a/src/scss/settings/_all.scss
+++ b/src/scss/settings/_all.scss
@@ -1,25 +1,18 @@
 body {
-  margin: 0;
+  margin: 0 auto;
+  padding: 0;
   height: 100vh;
   width: 100vw;
   background-color: salmon;
 
-  // display: flex;
-  // place-items: center;
-  // overflow-y: hidden;
-  // overflow-x: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 #root {
   width: 100%;
   height: 100%;
-  // line-height: 1.5;
-
-  // margin: 0 auto;
-  // text-align: center;
 }
-
-
 
 //vite.js index
 // :root {
