--- a/src/scss/elements/_Journal_Entries_Styles.scss
+++ b/src/scss/elements/_Journal_Entries_Styles.scss
@@ -28,6 +28,10 @@
       margin-top: 8.5px;
       button {
         @include main_button_styles;
+        color: rgb(255, 241, 229);
+        &:hover {
+          box-shadow: 2px 2px 2px 2px rgb(75, 56, 56);
+        }
       }
     }
     .Title_Entries {
@@ -57,6 +61,7 @@
         overflow-y: scroll;
         width: 50%;
         height: 63%;
+        opacity: 0.7;
 
         .Ul_Entries {
           list-style: none;
@@ -75,40 +80,46 @@
               .current_date_div {
                 border-radius: 20px;
                 padding: 10px;
-                font-size: 1.6rem;
+                font-size: 1.4rem;
                 font-weight: bold;
                 margin: 5px;
-                color: #99113a;
-                text-shadow: 1px 1px black;
+                color: black;
+                font-family: "Exo 2", sans-serif;
               }
               .entry_div {
                 font-size: 1.2rem;
                 border-radius: 20px;
                 padding: 10px;
-                font-weight: bold;
-                line-height: normal;
+                // font-weight: bold;
+                line-height: 125%;
                 min-height: 50px;
                 color: black;
+                font-family: "Exo 2", sans-serif;
               }
               .song_button {
                 border-radius: 20px;
-                padding: 10px;
+                padding: 8px;
                 font-size: 1.1rem;
 
                 width: 100%;
                 display: flex;
                 justify-content: center;
-
+                border-bottom: 3px solid transparent;
                 a {
-                  background-color: rgba(20, 209, 20, 0.7);
+                  background-color: white;
                   color: black;
-                  width: 300px;
+                  width: 320px;
                   text-align: center;
                   border-radius: 20px;
                   padding: 5px;
+                  box-shadow: 2px 2px black;
+                  border: 1px solid transparent;
+                  font-family: "Exo 2", sans-serif;
                 }
                 a:hover {
-                  background-color: rgba(20, 209, 20, 1);
+                  background-color: $main-color;
+
+                  border: 1px solid black;
                 }
               }
             }
