Adding styles to Error_404 component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,3 +18,4 @@
 @import "../scss/elements/Journal_Form_Styles.scss";
 @import "../scss/elements/Main_Styles";
 @import "../scss/elements/Journal_Entries_Styles";
+@import "../scss/elements/Error_404_Styles";
